--- a/phone_se_app/pubspec.yaml
+++ b/phone_se_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # qr_code_scanner: ^1.0.1
   mobile_scanner: ^6.0.7
   fl_chart: ^0.71.0
+  flutter_upi_india: ^0.0.6   # UPI payments
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
